fix scrollbar randomly showing up when scrolling too fast

--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,7 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100dvh;
+  overflow: clip;
 }
 
 h1 {
